# Portal

./: .dockerignore  .env.production.example  .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  CHANGELOG.md  CHECKLIST.md  CNAME  CONTRIBUTING.md  Cargo.toml  DEPLOY_CHECKLIST.md  DEPLOY_STATUS.md  DEVELOPMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_DELIVERY.md  INDEX.md  INSTALL_RUST_FIRST.md  INTEGRATIONS.md  INTEGRATIONS_COMPLETE.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_FINAL.md  ROADMAP.md  SECURITY.md  START_HERE.md  STATUS.md  SUMMARY.md  TROUBLESHOOTING.md  deploy-portal.ps1  docker-compose.avila-full.yml  docker-compose.yml  first-commit.bat  first-commit.sh  generate-cert.sh  healthcheck.sh  index.html  install-rust.bat  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-portal.yml  pages.yml  release.yml
auth-service/: Dockerfile  main.py  requirements.txt
backend/: .env.example  .env.production.example  Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  config.rs  error.rs  main.rs  models.rs
backend/src/custom_middleware/: auth_middleware.rs  mod.rs
backend/src/handlers/: auth_handlers.rs  dashboard_handlers.rs  health_handlers.rs  mod.rs  product_handlers.rs
backend/src/services/: mod.rs  product_service.rs  user_service.rs
backend/static/styles/: main.css
docs/: index.html
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: navbar.rs
frontend/src/hooks/: mod.rs
frontend/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  not_found.rs  products.rs  register.rs
frontend/src/services/: api.rs
frontend/src/utils/: mod.rs
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: backup-to-onedrive.sh  setup-oracle-cloud.sh
shared/: Cargo.toml
shared/src/: lib.rs
static/: index.html
tools/icon-processor/: Processar_Icones.bat  README.md  icon_processor_gui.py  process_icons.py  requirements.txt
