[workspace]
members = [
    "backend",
    "frontend",
    "shared"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Avila Inc <contato@avila.inc>"]
license = "MIT"

[workspace.dependencies]
# Web frameworks
actix-web = "4.9"
actix-cors = "0.7"
actix-files = "0.6"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Security
bcrypt = "0.16"
jsonwebtoken = "9.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Storage"] }
gloo = "0.11"
gloo-console = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
